testsuite/tests/typecheck/should_fail/tcfail147.stderr

tcfail147.hs:7:19: error:
    Expecting one more argument to ‘XClass’
    Expected a type, but ‘XClass’ has kind ‘* -> Constraint’
    In the type ‘XClass’
    In the definition of data constructor ‘XCon’
    In the data declaration for ‘XData’
